# network-join

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug.h  ioutil.cpp  ioutil.h  main.cpp  relation.cpp  relation.h  run.sh  util.cpp  util.h
include/: MurmurHash3.h  debug.h  hash.h  ioutil.h  mpiutil.h  relation.h  util.h
lib/: libboost_mpi.so.1.53.0  libboost_serialization.so.1.53.0
src/: MurmurHash3.cpp  ioutil.cpp  main.cpp  mpiutil.cpp  util.cpp
src/common/: util.cpp
src/mpi/: mpiutil.cpp
tests/join/: both_in_middle.txt  both_on_bottom.txt  both_on_top.txt  multiple_matches.txt  no_matches.txt  test_join.cpp
tests/join/inputs/: cycle.txt  middle.txt  multiple_matches.txt  no_matches.txt  top.txt
tests/join/outputs/: cycle.txt  middle.txt  multiple.txt
tests/join/relations/: multiple_matches1.txt  no_matches2.txt
tests/join/test_cases/: both_in_middle_in2.txt  both_in_middle_out.txt  both_on_bottom_in2.txt  both_on_top_in1.txt  both_on_top_out.txt  multiple_matches_in1.txt  no_matches_in1.txt
tests/mpi/: mpi_test_triangles.cpp
tests/mpi_hypercube/: mpi_test_hypercube.cpp
tests/mpi_hypercube/test_cases/: nomatch.txt
tests/mpi_optimized/: mpi_test_optimized.cpp
tests/mpi_simple/: mpi_test_simple.cpp
tests/sort/: sort.txt
tests/sort/test_cases/: in1.txt  out1.txt
tests/triangles/: test_triangles.cpp
tests/triangles/test_cases/: out1.txt
